adding in initial card info

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -27,14 +27,14 @@
 
         <div class="card">
             <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
 
-                <a ID="name" class="live-status" href="#">
+                <a ID="Alec" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
                 <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
+                    <h class="photo-caption-h">Alec</h>
                     <p class="photo-caption-p">identity</p>
                 </div>
             </div>
@@ -54,14 +54,14 @@
 
         <div class="card">
             <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
 
-                <a ID="name" class="live-status" href="#">
+                <a ID="Alex" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
                 <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
+                    <h class="photo-caption-h">Alex</h>
                     <p class="photo-caption-p">identity</p>
                 </div>
             </div>
@@ -81,14 +81,14 @@
 
         <div class="card">
             <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
 
-                <a ID="name" class="live-status" href="#">
+                <a ID="Aubrey" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
                 <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
+                    <h class="photo-caption-h">Aubrey</h>
                     <p class="photo-caption-p">identity</p>
                 </div>
             </div>
@@ -108,14 +108,95 @@
 
         <div class="card">
             <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
-                <a ID="name" class="live-status" href="#">
+                <a ID="Charlie" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
                 <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
+                    <h class="photo-caption-h">Charlie</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: Limited,Legacy</p>
+                <br>
+                <p> Preferred archetype: Coco midrange, Grindy</p>
+                <br>
+                <p> First Set: Original Theros</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
+
+                <a ID="Garret" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Garret</h>
+                    <p class="photo-caption-p">(They/Them))</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
+
+                <a ID="Joseph" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Joseph JoJo</h>
+                    <p class="photo-caption-p">(He/Him)</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: THR Page Manager, "Official Alex"</p>
+                <br>
+                <p>Formats: Modern, Pauper, Pioneer</p>
+                <br>
+                <p>Favorite Format: Modern</p>
+                <br>
+                <p> Preferred archetype: Combo, Combo Control, Aggro</p>
+                <br>
+                <p> First Set: Original Theros</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
+
+                <a ID="Michael" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Michael</h>
                     <p class="photo-caption-p">identity</p>
                 </div>
             </div>
@@ -135,15 +216,15 @@
 
         <div class="card">
             <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
-                <a ID="name" class="live-status" href="#">
+                <a ID="Nick" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
                 <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
-                    <p class="photo-caption-p">identity</p>
+                    <h class="photo-caption-h">Nick</h>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
 
@@ -162,26 +243,26 @@
 
         <div class="card">
             <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
-                <a ID="name" class="live-status" href="#">
+                <a ID="Roy" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
                 <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
-                    <p class="photo-caption-p">identity</p>
+                    <h class="photo-caption-h">Roy</h>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: Pat's Store Champion</p>
                 <br>
                 <p>Formats: blah blah blah</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Vintage Cube</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: MonoR/MonoW</p>
                 <br>
                 <p> Anything else?: blah blah blah</p>
             </div>
@@ -189,14 +270,14 @@
 
         <div class="card">
             <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
 
-                <a ID="name" class="live-status" href="#">
+                <a ID="Trey" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
                 <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
+                    <h class="photo-caption-h">Trey</h>
                     <p class="photo-caption-p">identity</p>
                 </div>
             </div>
@@ -214,88 +295,7 @@
             </div>
         </div>
 
-        <div class="card">
-            <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-
-                <a ID="name" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
-
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
-            </div>
-
-            <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
-                <br>
-                <p>Formats: blah blah blah</p>
-                <br>
-                <p>Favorite Format: blah blah blah</p>
-                <br>
-                <p> Preferred archetype: blah blah blah</p>
-                <br>
-                <p> Anything else?: blah blah blah</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-
-                <a ID="name" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
-
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
-            </div>
-
-            <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
-                <br>
-                <p>Formats: blah blah blah</p>
-                <br>
-                <p>Favorite Format: blah blah blah</p>
-                <br>
-                <p> Preferred archetype: blah blah blah</p>
-                <br>
-                <p> Anything else?: blah blah blah</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-
-                <a ID="name" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
-
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Name</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
-            </div>
-
-            <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
-                <br>
-                <p>Formats: blah blah blah</p>
-                <br>
-                <p>Favorite Format: blah blah blah</p>
-                <br>
-                <p> Preferred archetype: blah blah blah</p>
-                <br>
-                <p> Anything else?: blah blah blah</p>
-            </div>
-        </div>
-
-        <!-- hidden template for card -->
+        <!-- template for card -->
         <!-- <div class="card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
