adding in twitch links initial

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -157,6 +157,8 @@
                 <p> Preferred archetype: blah blah blah</p>
                 <br>
                 <p> Anything else?: blah blah blah</p>
+                <br>
+                <a href="https://www.twitch.tv/thr_gk">Twitch Channel</a>
             </div>
         </div>
 
@@ -184,6 +186,8 @@
                 <p> Preferred archetype: Combo, Combo Control, Aggro</p>
                 <br>
                 <p> First Set: Original Theros</p>
+                <br>
+                <a href="https://www.twitch.tv/thr_prothero">Twitch Channel</a>
             </div>
         </div>
 
