full html restructure

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -25,7 +25,209 @@
 
     <section class="team-cards">
 
+        <!-- Alec's Card link -->
         <div class="card">
+            <div class=card-photo>
+                <a href="#Alec-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
+                </a>
+                <a ID="Alec" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Alec</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Alex's Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href="#Alex-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
+                </a>
+
+                <a ID="Alex" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Alex</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Aubreys Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href=#Aubrey-card>
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
+                </a>
+
+                <a ID="Aubrey" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Aubrey</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Charlies Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href="#Charlie-card">
+                    <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
+                </a>
+
+                <a ID="Charlie" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Charlie</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Garret's Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href="#Garret-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
+                </a>
+
+                <a ID="Garret" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Garret</h>
+                    <p class="photo-caption-p">(They/Them)</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Joseph's Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href="#Joseph-card">
+                    <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
+                </a>
+
+                <a ID="Joseph" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Joseph JoJo</h>
+                    <p class="photo-caption-p">(He/Him)</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Michael's Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href=#Michael-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
+                </a>
+
+                <a ID="Michael" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Michael</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Nick's Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href="#Nick-card">
+                    <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
+                </a>
+
+                <a ID="Nick" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Nick</h>
+                    <p class="photo-caption-p">(He/Him)</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Roy's Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href="#Roy-card">
+                    <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
+                </a>
+
+                <a ID="Roy" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Roy</h>
+                    <p class="photo-caption-p">(He/Him)</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Trey's Card link -->
+        <div class="card">
+            <div class=card-photo>
+                <a href="#Trey-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
+                </a>
+
+                <a ID="Trey" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Trey</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- template for card -->
+        <!-- <div class="card">
+            <div class=card-photo>
+
+                <a href="#member-card">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                </a>
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
+            </div>
+        </div> -->
+
+    </section>
+
+    <!-- Alec's full info card -->
+    <section class=card-info>
+        <div class="card" id="Alec-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
 
@@ -52,7 +254,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Alex's full info card -->
+        <div class="card" id="Alex-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
 
@@ -79,7 +282,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Aubrey's full info card -->
+        <div class="card" id="Aubrey-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
 
@@ -106,7 +310,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Charlies's full info card -->
+        <div class="card" id="Charlie-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
@@ -133,7 +338,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Garrets's full info card -->
+        <div class="card" id="Garret-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
 
@@ -162,7 +368,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Joseph's full info card -->
+        <div class="card" id="Joseph-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
 
@@ -191,7 +398,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Michaels's full info card -->
+        <div class="card" id="Michael-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
@@ -218,7 +426,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Nick's full info card -->
+        <div class="card" id="Nick-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
@@ -245,7 +454,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Roy's full info card -->
+        <div class="card" id="Roy-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
@@ -272,7 +482,8 @@
             </div>
         </div>
 
-        <div class="card">
+           <!-- Trey's full info card -->
+        <div class="card" id="Trey-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
 
@@ -300,7 +511,7 @@
         </div>
 
         <!-- template for card -->
-        <!-- <div class="card">
+        <!-- <div class="card" id="name-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
 
@@ -326,7 +537,6 @@
                 <p> Anything else?: blah blah blah</p>
             </div>
         </div> -->
-
     </section>
 
 
