changing classes and breaking apart stylings

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -227,7 +227,8 @@
 
     <!-- Alec's full info card -->
     <section class=card-info>
-        <div class="card" id="Alec-card">
+
+        <div class="info-card" id="Alec-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
 
@@ -255,7 +256,7 @@
         </div>
 
            <!-- Alex's full info card -->
-        <div class="card" id="Alex-card">
+        <div class="info-card" id="Alex-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
 
@@ -283,7 +284,7 @@
         </div>
 
            <!-- Aubrey's full info card -->
-        <div class="card" id="Aubrey-card">
+        <div class="info-card" id="Aubrey-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
 
@@ -311,7 +312,7 @@
         </div>
 
            <!-- Charlies's full info card -->
-        <div class="card" id="Charlie-card">
+        <div class="info-card" id="Charlie-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
@@ -339,7 +340,7 @@
         </div>
 
            <!-- Garrets's full info card -->
-        <div class="card" id="Garret-card">
+        <div class="info-card" id="Garret-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
 
@@ -369,7 +370,7 @@
         </div>
 
            <!-- Joseph's full info card -->
-        <div class="card" id="Joseph-card">
+        <div class="info-card" id="Joseph-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
 
@@ -399,7 +400,7 @@
         </div>
 
            <!-- Michaels's full info card -->
-        <div class="card" id="Michael-card">
+        <div class="info-card" id="Michael-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
@@ -427,7 +428,7 @@
         </div>
 
            <!-- Nick's full info card -->
-        <div class="card" id="Nick-card">
+        <div class="info-card" id="Nick-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
@@ -455,7 +456,7 @@
         </div>
 
            <!-- Roy's full info card -->
-        <div class="card" id="Roy-card">
+        <div class="info-card" id="Roy-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
@@ -483,7 +484,7 @@
         </div>
 
            <!-- Trey's full info card -->
-        <div class="card" id="Trey-card">
+        <div class="info-card" id="Trey-card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
 
