fixing class syntax

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -15,7 +15,7 @@
 <body>
     <header class="page-header">
         <H1 class="nav-name">Team High Roll</H1>
-        <nav class=navbar>
+        <nav class="navbar">
             <!-- list of navigation bar items -->
             <a class="navitem" href="/index.html">Home</a>
             <a class="navitem active" href="about.html">About Us</a>
@@ -27,7 +27,7 @@
 
         <!-- Alec's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Alec-card">
                     <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
                 </a>
@@ -44,7 +44,7 @@
 
         <!-- Alex's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Alex-card">
                     <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
                 </a>
@@ -62,7 +62,7 @@
 
         <!-- Aubreys Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href=#Aubrey-card>
                     <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
                 </a>
@@ -80,7 +80,7 @@
 
         <!-- Charlies Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Charlie-card">
                     <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
                 </a>
@@ -98,7 +98,7 @@
 
         <!-- Garret's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Garret-card">
                     <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
                 </a>
@@ -116,7 +116,7 @@
 
         <!-- Joseph's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Joseph-card">
                     <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
                 </a>
@@ -134,7 +134,7 @@
 
         <!-- Michael's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href=#Michael-card">
                     <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
                 </a>
@@ -152,7 +152,7 @@
 
         <!-- Nick's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Nick-card">
                     <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
                 </a>
@@ -170,7 +170,7 @@
 
         <!-- Roy's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Roy-card">
                     <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
                 </a>
@@ -188,7 +188,7 @@
 
         <!-- Trey's Card link -->
         <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <a href="#Trey-card">
                     <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
                 </a>
@@ -206,7 +206,7 @@
 
         <!-- template for card -->
         <!-- <div class="card">
-            <div class=card-photo>
+            <div class="card-photo">
 
                 <a href="#member-card">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
@@ -229,7 +229,7 @@
     <section class=card-info>
 
         <div class="info-card" id="Alec-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
 
                 <a ID="Alec" class="live-status" href="#">
@@ -257,7 +257,7 @@
 
            <!-- Alex's full info card -->
         <div class="info-card" id="Alex-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
 
                 <a ID="Alex" class="live-status" href="#">
@@ -285,7 +285,7 @@
 
            <!-- Aubrey's full info card -->
         <div class="info-card" id="Aubrey-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
 
                 <a ID="Aubrey" class="live-status" href="#">
@@ -313,7 +313,7 @@
 
            <!-- Charlies's full info card -->
         <div class="info-card" id="Charlie-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
                 <a ID="Charlie" class="live-status" href="#">
@@ -341,7 +341,7 @@
 
            <!-- Garrets's full info card -->
         <div class="info-card" id="Garret-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
 
                 <a ID="Garret" class="live-status" href="#">
@@ -371,7 +371,7 @@
 
            <!-- Joseph's full info card -->
         <div class="info-card" id="Joseph-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
 
                 <a ID="Joseph" class="live-status" href="#">
@@ -401,7 +401,7 @@
 
            <!-- Michaels's full info card -->
         <div class="info-card" id="Michael-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
                 <a ID="Michael" class="live-status" href="#">
@@ -429,7 +429,7 @@
 
            <!-- Nick's full info card -->
         <div class="info-card" id="Nick-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
                 <a ID="Nick" class="live-status" href="#">
@@ -457,7 +457,7 @@
 
            <!-- Roy's full info card -->
         <div class="info-card" id="Roy-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
                 <a ID="Roy" class="live-status" href="#">
@@ -485,7 +485,7 @@
 
            <!-- Trey's full info card -->
         <div class="info-card" id="Trey-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
 
                 <a ID="Trey" class="live-status" href="#">
@@ -513,7 +513,7 @@
 
         <!-- template for card -->
         <!-- <div class="card" id="name-card">
-            <div class=card-photo>
+            <div class="card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
 
                 <a ID="name" class="live-status" href="#">
