--- a/Pages/content.html
+++ b/Pages/content.html
@@ -15,7 +15,7 @@
 <body>
     <header class="page-header">
         <H1 class="nav-name">Team High Roll</H1>
-        <nav class=navbar>
+        <nav class="navbar">
             <!-- list of navigation bar items -->
             <a class="navitem" href="/index.html">Home</a>
             <a class="navitem" href="about.html">About Us</a>
